crates/strider/tests/snapshots/v2__x86__calls__apply_indirect.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "4" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "4" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "4" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v5" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v5" [color="#888888", style=dashed];
  "v5" -> "4" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v6" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v6" [color="#888888", style=dashed];
  "v6" -> "4" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "4" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "4" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "3" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "9" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x40123e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "14" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
