crates/strider/tests/snapshots/v2__x86__calls__fib_recursive.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ XMM0", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "18" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x401114:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "15" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "28" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "29" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x401107:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "35" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nEAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "37" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ ST0", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "45" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v46" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v46" [color="#888888", style=dashed];
  "v46" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ EDX", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "47" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v48" [color="#888888", style=dashed];
  "v48" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="φ ESI", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "25" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v50" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v50" [color="#888888", style=dashed];
  "v50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v51" [color="#888888", style=dashed];
  "v51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "32" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
